[project]
name = "pythonproject14-17"
version = "0.1.0"
description = ""
authors = [
    {name = "ne1ntrovert",email = "shironovilya777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "idna (>=3.10,<4.0)"
]

[tool.poetry]
packages = [{include = "pythonproject14"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
